--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,5 +1,9 @@
 <h1><%= @user.firstname %>'s Profile Page</h1>
-<%= image_tag(rails_blob_path(@photo), size: '200x200') if @photo %>
+<% if @photo %>
+  <%= image_tag(rails_blob_path(@photo), size: '200x200') %>
+<% else %>
+  <%= image_tag("default-profile-picture.png", size: '200x200') %>
+<% end %>
 
 <br>
 <%= link_to "Add Photo Album", new_user_album_path(@user.id) %>
