--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -8,11 +8,15 @@
 <% i = 0 %>
 <% @results.each do |result| %>
   <%= image_tag(@album.thumbnail(i)) %>
+  <% if @user.id == current_user.id %>
   <%= link_to "Delete", destroy_image_path(:album_id => params[:id], :id => result['blob_id']), method: :delete %>
   <%= link_to "Make Profile Photo", set_profile_photo_path(:id => result['id']), method: :post %>
+  <% end %>
   <% i += 1 %>
 <% end %>
 
 <br><br>
-<%= link_to 'Delete Album', destroy_album_path(:user_id => params[:user_id], :id => params[:id]), method: :delete, data: { confirm: 'Are you sure?' } %><br>
+<% if @user.id == current_user.id %>
+<%= link_to 'Delete Album', destroy_album_path(:user_id => params[:user_id], :id => params[:id]), method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %> <br>
 <%= link_to "Back to profile", profile_index_path(:id => params[:user_id]) %>
