--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -43,7 +43,8 @@
         <!-- links -->
         <div class="collapse navbar-collapse order-2 flex-row-reverse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <%= link_to("Profile", profile_index_path(:id => current_user.id), class: "nav-item nav-link") %> 
+            <%= link_to("Posts", posts_path, class: "nav-item nav-link") %> 
+            <%= link_to("My Profile", profile_index_path(:id => current_user.id), class: "nav-item nav-link") %> 
             <%= link_to("Log out", session_path(:id => current_user.id), :method => :delete, class: "nav-item nav-link") %>
           </div>
         </div>
@@ -104,10 +105,10 @@
                     <div id="singlecomment">
 
                       <!-- Name -->
-                      <%= link_to "#{User.find(post.user_id).firstname.capitalize()} #{User.find(post.user_id).lastname.capitalize()}", profile_index_path(:id => User.find(post.user_id)), class: "text-dark p-0 m-0", style: "font-size: 15px; font-weight: bold;"%>
+                      <%= link_to "#{User.find(comment.user_id).firstname.capitalize()} #{User.find(comment.user_id).lastname.capitalize()}", profile_index_path(:id => User.find(comment.user_id)), class: "text-dark p-0 m-0", style: "font-size: 15px; font-weight: bold;"%>
 
                       <!-- Body -->
-                      <p class="mb-0" style="font-size: 15px; margin-top: -3px"><%= comment.body %></p>
+                      <p class="mb-0 pb-1" style="font-size: 15px; margin-top: -3px"><%= comment.body %></p>
 
                       <!-- Edit/Delete Comment -->
                       <% if comment.user_id == current_user.id %>
