Update stock image profile pic and capitalize first and last name on display

--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -67,7 +67,7 @@
                 <% end %>
 
                 <!-- Name -->
-                <h4 class="text-center pt-2 mb-2"><%= @user.firstname %> <%= @user.lastname %></h4>
+                <h4 class="text-center pt-2 mb-2"><%= @user.firstname.capitalize() %> <%= @user.lastname.capitalize() %></h4>
               </div>
             </div>   
           </div>
