--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -104,7 +104,7 @@
 
                 <!-- Poster Name -->  
                 <%= link_to "#{User.find(post.user_id).firstname.capitalize()}", profile_index_path(:id => User.find(post.user_id)), class: "mb-0 pb-0", style:"font-size: 19px;" %>
-                <span class="mb-0 pb-0 ml-1" style="font-size: 19px;">made a post</span>           
+                <span class="mb-0 pb-0 ml-1" style="font-size: 18px; float: right"><%= post.updated_at.in_time_zone("London").strftime("%-d %b at %H:%M") %></span>           
                 <div class="post-rounded my-2 px-2 " style="min-height: 10px; width:700px">
 
                   <!-- Post Message -->  
