--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -111,10 +111,7 @@
                   <p class="mb-0 pb-0 text-secondary" style="font-size: 14px;"><%= post.updated_at.in_time_zone("London").strftime("%-d %b at %H:%M") %></p>  
                 </div>
                 
-                
-                
-                
-                <div class="post-rounded my-2 px-2 " style="min-height: 10px; width:700px">
+                <div class="post-rounded mb-2 mt-1 px-2 " style="min-height: 10px; width:700px">
 
                   <!-- Post Message -->  
                   <p class="pt-1 text-dark mb-1"><%= post.message %></p>
